18 Apr 2002 Disable syncio retry during IPL - Greg Smith
15 Apr 2002 IEEE floating point (attempt) for Win32 - Greg Smith
13 Apr 2002 Add description to ctci-w32 error message (w32ctca) - Fish
13 Apr 2002 Fix bug in w32chan "devtmax" logic (TrimDeviceThreads) - Fish
13 Apr 2002 Fix some benign warnings - Fish
13 Apr 2002 Move RC file processing to a separate thread - Fish
12 Apr 2002 Fix TRAP storing incorrect PSW in trap save area - Jan Jaeger
12 Apr 2002 Fix false specification exception in RP (64bit only) - Jan Jaeger
11 Apr 2002 Build device type table and device handler tables - Jan Jaeger
08 Apr 2002 Remove cckd garbage collection messages - Greg Smith
08 Apr 2002 "&comments on|off" logic deleted; '*' now "talking" comments,
            '#' now silent comments (per Willem's suggestion). - Fish
08 Apr 2002 (RESCINDED): display_version via stdout instead of stderr;
            set stdout/stderr to unbuffered (if externalgui) instead - Fish
08 Apr 2002 RC file handling: 1) new 'pause nnn' .rc-file-only command
            to sleep for 1-999 seconds, 2) accept and display comments
            from either the keyboard or the .rc file, 3) control .rc file
            comments logging via new "&comments on|off" .rc-file-command,
            4) use buffered "fgets" call to read .rc file for efficiency,
            5) silently ignore CR's in .rc file for Windows compatibility,
            6) prefix logged commands from .rc file with "> ". -- Fish
08 Apr 2002 parse_args (config.c): 1) not EXTERNALGUI dependent,
            2) support embedded quoted strings (sf="path") - Fish
08 Apr 2002 Update message buffer in exgui mode - Jan Jaeger
05 Apr 2002 Support cookies to save settings - Jan Jaeger
02 Apr 2002 hercload.html updated for cckd utility support - Greg Smith
28 Mar 2002 HTTP server - Jan Jaeger
24 Mar 2002 Fix ADRFMT definition in cmspc.c - Bernard van der Helm
21 Mar 2002 Fix MVPG so it works with Expanded Storage - Paul Leisy