@@ -1,3 +1,4 @@
+19 Apr 2002 Fix cckdcdsk return code bug - Fish
 18 Apr 2002 Disable syncio retry during IPL - Greg Smith
 15 Apr 2002 IEEE floating point (attempt) for Win32 - Greg Smith
 13 Apr 2002 Add description to ctci-w32 error message (w32ctca) - Fish
